# serializer version: 1
# name: test_create_or_update_table_add_columns
  list([
  ])
# ---
# name: test_create_or_update_table_add_columns.1
  list([
  ])
# ---
# name: test_create_or_update_table_new_table
  list([
  ])
# ---
# name: test_create_or_update_table_nullable_columns
  list([
  ])
# ---
# name: test_create_or_update_table_nullable_columns.1
  list([
  ])
# ---
# name: test_existing_table_with_duplicate_uuids
  list([
    dict({
      'DATA_TYPE': 'GPX_TRACKPOINT',
      'GPS_LATITUDE': 37.7749,
      'GPS_LONGITUDE': -122.4194,
      'UUID_STRING': 'duplicate-uuid',
    }),
    dict({
      'DATA_TYPE': 'GPX_TRACKPOINT',
      'GPS_LATITUDE': 37.775,
      'GPS_LONGITUDE': -122.4195,
      'UUID_STRING': 'duplicate-uuid',
    }),
  ])
# ---
# name: test_existing_table_without_unique_constraint
  list([
    dict({
      'DATA_TYPE': 'GPX_TRACKPOINT',
      'GPS_LATITUDE': 37.7749,
      'GPS_LONGITUDE': -122.4194,
      'UUID_STRING': 'uuid-1',
    }),
    dict({
      'DATA_TYPE': 'GPX_TRACKPOINT',
      'GPS_LATITUDE': 37.775,
      'GPS_LONGITUDE': -122.4195,
      'UUID_STRING': 'uuid-2',
    }),
    dict({
      'DATA_TYPE': 'GPX_TRACKPOINT',
      'GPS_LATITUDE': 37.7751,
      'GPS_LONGITUDE': -122.4196,
      'UUID_STRING': 'uuid-3',
    }),
  ])
# ---
# name: test_query_sqlite_to_dataframe_with_params
  list([
    dict({
      'DATA_TYPE': 'GPX_TRACKPOINT',
      'GPS_LATITUDE': 37.7749,
      'GPS_LONGITUDE': -122.4194,
      'UUID_STRING': 'test-uuid-1',
    }),
  ])
# ---
# name: test_upsert_dataframe_to_sqlite_new_table
  list([
    dict({
      'DATA_TYPE': 'GPX_TRACKPOINT',
      'GPS_LATITUDE': 37.7749,
      'GPS_LONGITUDE': -122.4194,
      'UUID_STRING': 'test-uuid-1',
    }),
    dict({
      'DATA_TYPE': 'GPX_WAYPOINT',
      'GPS_LATITUDE': 37.775,
      'GPS_LONGITUDE': -122.4195,
      'UUID_STRING': 'test-uuid-2',
    }),
  ])
# ---
# name: test_upsert_dataframe_to_sqlite_update_existing
  list([
    dict({
      'DATA_TYPE': 'GPX_TRACKPOINT',
      'GPS_LATITUDE': 1.1,
      'GPS_LONGITUDE': -10.1,
      'UUID_STRING': 'test-uuid-1',
    }),
    dict({
      'DATA_TYPE': 'GPX_WAYPOINT',
      'GPS_LATITUDE': 2.2,
      'GPS_LONGITUDE': -20.2,
      'UUID_STRING': 'test-uuid-2',
    }),
  ])
# ---
# name: test_upsert_dataframe_to_sqlite_update_existing.1
  list([
    dict({
      'DATA_TYPE': 'GPX_WAYPOINT',
      'GPS_LATITUDE': 2.2,
      'GPS_LONGITUDE': -20.2,
      'UUID_STRING': 'test-uuid-2',
    }),
    dict({
      'DATA_TYPE': 'GPX_TRACKPOINT',
      'GPS_LATITUDE': 1.2,
      'GPS_LONGITUDE': -10.2,
      'UUID_STRING': 'test-uuid-1',
    }),
    dict({
      'DATA_TYPE': 'GPX_TRACKPOINT',
      'GPS_LATITUDE': 3.3,
      'GPS_LONGITUDE': -30.3,
      'UUID_STRING': 'test-uuid-3',
    }),
  ])
# ---
# name: test_upsert_dataframe_to_sqlite_with_none_values
  list([
    dict({
      'CAPTION': None,
      'DATA_TYPE': 'GPX_TRACKPOINT',
      'GPS_LATITUDE': 37.7749,
      'GPS_LONGITUDE': -122.4194,
      'NAME': None,
      'UUID_STRING': 'test-uuid-1',
    }),
  ])
# ---
# name: test_upsert_with_clean_data_works_properly
  list([
    dict({
      'DATA_TYPE': 'GPX_TRACKPOINT',
      'GPS_LATITUDE': 37.7749,
      'GPS_LONGITUDE': -122.4194,
      'UUID_STRING': 'uuid-1',
    }),
    dict({
      'DATA_TYPE': 'GPX_TRACKPOINT',
      'GPS_LATITUDE': 37.775,
      'GPS_LONGITUDE': -122.4195,
      'UUID_STRING': 'uuid-2',
    }),
  ])
# ---
# name: test_upsert_with_clean_data_works_properly.1
  list([
    dict({
      'DATA_TYPE': 'GPX_TRACKPOINT',
      'GPS_LATITUDE': 37.775,
      'GPS_LONGITUDE': -122.4195,
      'UUID_STRING': 'uuid-2',
    }),
    dict({
      'DATA_TYPE': 'GPX_TRACKPOINT',
      'GPS_LATITUDE': 37.7799,
      'GPS_LONGITUDE': -122.42,
      'UUID_STRING': 'uuid-1',
    }),
    dict({
      'DATA_TYPE': 'GPX_WAYPOINT',
      'GPS_LATITUDE': 37.78,
      'GPS_LONGITUDE': -122.4201,
      'UUID_STRING': 'uuid-3',
    }),
  ])
# ---
